objects/OpportunityLinesSV__c.object
<CustomObject>
    <fields>
        <fullName>Architecture_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SV Architecture Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityLinesSV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Entity__c</fullName>
        <description>Get the Business Entity from Product2</description>
        <formula>TEXT(Technology_Service__r.Business_Entity__c)</formula>
        <label>SV Business Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_000_Value__c</fullName>
        <label>SV Expected $(000) Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date__c</fullName>
        <label>SV Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <formula>Expected_000_Value__c * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SV Expected $ Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incubation_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SV Incubation Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityLinesSV1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Reference__c</fullName>
        <label>Opportunity Line Item Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>SV Expected Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Prospect</fullName>
                </value>
                <value>
                    <fullName>2 - Qualification</fullName>
                </value>
                <value>
                    <fullName>3 - Proposal</fullName>
                </value>
                <value>
                    <fullName>4 - Agreement</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Won</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Cancelled</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Lost</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Specialist Views</relationshipLabel>
        <relationshipName>OpportunityLinesSV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>SV Product Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family ID</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Specialist Views</relationshipLabel>
        <relationshipName>Specialist_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>SV Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>SV Service Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_Description__c</fullName>
        <label>SV Service Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_Tech__c</fullName>
        <formula>Service_Level__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SV Service Level Tech</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Level</label>
        <referenceTo>Service_Level__c</referenceTo>
        <relationshipName>OpportunityLinesSV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Program__c</fullName>
        <formula>Technology_Service__r.Service_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SV Service Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SV Software Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Specialist_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Business_Entity__c</fullName>
        <description>Get the Sub Business Entity from Product 2</description>
        <formula>Technology_Service__r.Sub_Business_Entity__c</formula>
        <label>SV Sub Business Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Get the info from Product 2</description>
        <label>Technology &amp; Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>OpportunityLinesSV</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Pilot Specialist View</description>
    <label>Specialist View</label>
    <nameField>
        <displayFormat>OppLSV-{00000000}</displayFormat>
        <label>OpportunityLinesSV</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialist Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Business_Entity__c</columns>
        <columns>Sub_Business_Entity__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Service_Category__c</columns>
        <columns>Service_Program__c</columns>
        <columns>Service_Level_Tech__c</columns>
        <columns>Service_Level_Description__c</columns>
        <columns>Architecture_Specialist__c</columns>
        <columns>Incubation_Specialist__c</columns>
        <columns>Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Architecture_and_Incubation_Specialist_Lines</fullName>
        <active>true</active>
        <label>Architecture and Incubation Specialist Lines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Specialist_Lines</fullName>
        <active>true</active>
        <label>Software Specialist Lines</label>
    </recordTypes>
</CustomObject>